infra/kubernetes/owtf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owtf
  namespace: owtf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owtf
  template:
    metadata:
      labels:
        app: owtf
    spec:
      containers:
      - name: owtf
        image: ttl.sh/owtf:4h
        command: ["owtf"]
        ports:
        - containerPort: 8008
        - containerPort: 8010
        - containerPort: 8009
        volumeMounts:
        - name: owtf-volume
          mountPath: /owtf
      restartPolicy: Always
      volumes:
      - name: owtf-volume
        persistentVolumeClaim:
          claimName: owtf-pvc
