infra/kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: owtf
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
