infra/kubernetes/owtf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owtf-service
  namespace: owtf
spec:
  selector:
    app: owtf
  ports:
    - name: port1
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: port2
      protocol: TCP
      port: 8010
      targetPort: 8010
    - name: ui
      protocol: TCP
      port: 8009
      targetPort: 8009
